--- a/SSVEP/intro.ipynb
+++ b/SSVEP/intro.ipynb
@@ -5,8 +5,14 @@
    "metadata": {},
    "source": [
     "# Anotações sobre os artigos\n",
+    "**Ana Carla Quallio Rosa e Thaynara Falcão**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## A dataset of EEG signals from a single-channel SSVEP-based brain computer interface\n",
-    "**Ana Carla Quallio Rosa e Thaynara Falcão**\n",
     "\n",
     "*Resumo traduzido*\n",
     "```\n",
@@ -46,18 +52,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## BETA: A Large Benchmark Database Toward SSVEP-BCI Application\n",
+    "\n",
+    "*Informações gerais*\n",
+    "```\n",
+    "O banco de dados BETA é composto por dados de eletroencefalograma (EEG) de 64 canais de 70 indivíduos realizando uma tarefa de ortografia com 40 alvos. Recomendamos o uso da métrica da relação sinal-ruído (SNR) de banda larga e do quociente BCI para caracterizar o SSVEP nos níveis de ensaio único e populacional, respectivamente. O BETA consiste nos dados coletados fora do ambiente laboratorial da sala de blindagem eletromagnética.\n",
+    "```\n",
+    "\n",
+    "*Descrição dos dados*\n",
+    "```\n",
+    "A base de dados utilizada neste trabalho está disponível gratuitamente para pesquisas científicas, onde é armazenada no formato MATLAB. Este banco de dados contém 70 assuntos, e cada assunto corresponde a um arquivo mat. Os nomes dos sujeitos são mapeados em índices de S1 a S70 para desidentificação. Cada arquivo no banco de dados consiste em uma matriz de estrutura MATLAB, que incluía os dados de EEG de 4 blocos e suas informações suplementares correspondentes como seus campos.\n",
+    "Os dados foram pré-processados. Com o advento do big data, o BETA mostra-se promissor para facilitar a modelagem cerebral em nível populacional e ajudar a desenvolver novas abordagens de classificação ou metodologia de aprendizagem.\n",
+    "```\n"
+   ]
   },
   {
    "cell_type": "code",
