--- a/SSVEP/load.ipynb
+++ b/SSVEP/load.ipynb
@@ -2,24 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
-    "\n",
+    "# Base de dados AVI SSVep\n",
     "from scipy.io import loadmat\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "# target é um alvo só\n",
+    "# single target é um único alvo piscante. a intenção é verificar se a pessoa está prestando atenção; usar como base line; não ter desvios de foco\n",
+    "# multi target tem pisca ao mesmo tempo (olhar para o 10 Hz, porém tem outras frequências também)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pré-carregamento\n",
-    "\n",
     "avi_data = list()\n",
     "for i in range(1,5):\n",
     "    avi_data.append(loadmat(f\"datasets/avi/single/Sub{i}_singletarget.mat\"))"
@@ -27,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -54,53 +57,93 @@
    ],
    "source": [
     "# extração direta dos dados\n",
-    "\n",
+    "# x equivale aos 4 participantes\n",
+    "# y é label\n",
     "X = [d['Data'][0][0][0] for d in avi_data]\n",
     "y = [d['Data'][0][0][1] for d in avi_data]\n",
     "\n",
-    "print(\"Divisão dos dados:\")\n",
+    "print(\"Divisão dos dados:\") # lado direito é o número de colunas\n",
     "for data in X:\n",
     "    print(data.shape)\n",
     "\n",
-    "print(\"\\nDivisão dos rótulos (sequências):\")\n",
+    "print(\"\\nDivisão dos rótulos (sequências):\") # mostra as frequências. 30 segundos pisca 10 HZ. Tira o 12. São 4 participantes \n",
     "for data in y:\n",
-    "    print(data)"
+    "    print(data)\n",
+    "\n",
+    "# note que os dois últimos repetem 3 vezes sempre. ele está limpando os 2 primeiros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((15360, 21), (1, 21))"
+       "(4, 1, 21)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Padronização de y\n",
+    "temp2 = list()\n",
+    "temp2.append(y[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))])\n",
+    "temp2.append(y[1][:, list(set(range(26)) - set([6, 16, 17, 18, 22]))])\n",
+    "temp2.append(y[2])\n",
+    "temp2.append(y[3])\n",
+    "y = np.array(temp2)\n",
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 15360, 21)"
+      ]
+     },
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# padronizando 1º participante\n",
+    "# X[0] apenas o primeiro participante\n",
+    "# [:mantém o 15360; depois faz todos - aqueles que não quer \n",
     "\n",
-    "X = X[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))]\n",
-    "y = y[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))]\n",
-    "X.shape, y.shape"
+    "temp = list()\n",
+    "temp.append(X[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))])\n",
+    "temp.append(X[1][:, list(set(range(26)) - set([6, 16, 17, 18, 22]))])\n",
+    "temp.append(X[2])\n",
+    "temp.append(X[3])\n",
+    "\n",
+    "X = np.array(temp)\n",
+    "X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# salva os dados numpy\n",
+    "# salva o notebook como um metadado direto\n",
     "\n",
-    "np.save(\"datasets/avi/single/data_sub1.npy\", X)\n",
-    "np.save(\"datasets/avi/single/labels_sub1.npy\", y)"
+    "np.save(\"datasets/avi/single/data_sub.npy\", X)\n",
+    "np.save(\"datasets/avi/single/labels_sub.npy\", y)\n",
+    "\n",
+    "# salvar como 4, 21, 15360"
    ]
   },
   {
@@ -110,8 +153,17 @@
     "### Tarefas:\n",
     "\n",
     "- Padronizar os dados de todos os 4 participantes dos dados *single-target* e salvar de forma adequada para utilização nos próximos notebooks.\n",
-    "- Realizar o mesmo estudo para os dados *multi-target*"
+    "- Realizar o mesmo estudo para os dados *multi-target*\n",
+    "- Deixar todos com 21 senão não dá para fazer matriz esparsa\n",
+    "- Entender o multi-target"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
