--- a/SSVEP/load.ipynb
+++ b/SSVEP/load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -75,34 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4, 1, 21)"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Padronização de y\n",
-    "temp2 = list()\n",
-    "temp2.append(y[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))])\n",
-    "temp2.append(y[1][:, list(set(range(26)) - set([6, 16, 17, 18, 22]))])\n",
-    "temp2.append(y[2])\n",
-    "temp2.append(y[3])\n",
-    "y = np.array(temp2)\n",
-    "y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -111,24 +84,53 @@
        "(4, 15360, 21)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# padronizando 1º participante\n",
     "# X[0] apenas o primeiro participante\n",
     "# [:mantém o 15360; depois faz todos - aqueles que não quer \n",
     "\n",
+    "# Padronização de X\n",
     "temp = list()\n",
     "temp.append(X[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))])\n",
     "temp.append(X[1][:, list(set(range(26)) - set([6, 16, 17, 18, 22]))])\n",
     "temp.append(X[2])\n",
     "temp.append(X[3])\n",
     "\n",
+    "# Padronização de y\n",
+    "temp2 = list()\n",
+    "temp.append(y[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))])\n",
+    "temp.append(y[1][:, list(set(range(26)) - set([6, 16, 17, 18, 22]))])\n",
+    "temp.append(y[2])\n",
+    "temp.append(y[3])\n",
+    "y \n",
+    "\n",
     "X = np.array(temp)\n",
     "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 21, 15360)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mudando o formato de X\n",
+    "X_transposed = np.transpose(X, (0, 2, 1))\n",
+    "\n",
+    "# Verificar a nova forma de X\n",
+    "print(X_transposed.shape)"
    ]
   },
   {
@@ -157,13 +159,6 @@
     "- Deixar todos com 21 senão não dá para fazer matriz esparsa\n",
     "- Entender o multi-target"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
