--- a/SSVEP/load.ipynb
+++ b/SSVEP/load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "(4, 15360, 21)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,11 +102,11 @@
     "\n",
     "# Padronização de y\n",
     "temp2 = list()\n",
-    "temp.append(y[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))])\n",
-    "temp.append(y[1][:, list(set(range(26)) - set([6, 16, 17, 18, 22]))])\n",
-    "temp.append(y[2])\n",
-    "temp.append(y[3])\n",
-    "y \n",
+    "temp2.append(y[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))])\n",
+    "temp2.append(y[1][:, list(set(range(26)) - set([6, 16, 17, 18, 22]))])\n",
+    "temp2.append(y[2])\n",
+    "temp2.append(y[3])\n",
+    "y = np.array(temp2)\n",
     "\n",
     "X = np.array(temp)\n",
     "X.shape"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
