--- a/SSVEP/intro.ipynb
+++ b/SSVEP/intro.ipynb
@@ -70,6 +70,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AVI SSEVEP Dataset\n",
+    "\n",
+    "O conjunto de dados AVI SSVEP é um conjunto de dados gratuito (para uso não comercial) que contém medições de EEG de indivíduos saudáveis ​​expostos a alvos oscilantes para desencadear respostas SSVEP. O conjunto de dados foi produzido como parte de uma tese de mestrado. Todos os dados foram registrados usando três eletrodos (Oz, Fpz, Pz) durante o inverno 2012-2013.\n",
+    "\n",
+    "*Single target*\n",
+    "```\n",
+    "Neste experimento, o sujeito está sentado a 60 cm de distância de um monitor onde olha para um\n",
+    "único alvo cintilante que muda rapidamente de cor de preto para branco. O conjunto de dados consiste em\n",
+    "quatro sessões realizadas com quatro sujeitos de teste diferentes. Cada tentativa em uma sessão dura 30\n",
+    "segundos após os quais o sujeito faz uma breve pausa. Para cada uma das frequências, os ensaios são\n",
+    "repetido pelo menos 3 vezes.\n",
+    "```\n",
+    "\n",
+    "*Multi target*\n",
+    "```\n",
+    "Em vez de detectar se existem respostas SSVEP, é mais interessante detectar\n",
+    "para qual dos vários alvos com diferentes frequências de oscilação uma pessoa está olhando.\n",
+    "Neste experimento, o sujeito está sentado a 60 cm de distância de um monitor onde foca em um\n",
+    "de múltiplos alvos cintilantes que mudam de cor rapidamente de preto para branco. Para cada assunto,\n",
+    "existem dois arquivos representando duas sessões. Cada sessão tem dez tentativas de dezesseis segundos.\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
