--- a/SSVEP/load_single_avi.ipynb
+++ b/SSVEP/load_single_avi.ipynb
@@ -1,16 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "53201383-97a7-4d21-bcea-a9a45b191115",
+   "metadata": {},
+   "source": [
+    "## AVI Single Target"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
+   "id": "7f86392c-d169-4703-892d-0e78f25e7572",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n",
-    "# Base de dados AVI SSVep\n",
     "from scipy.io import loadmat\n",
-    "import numpy as np\n",
-    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "82f836d0-9ba2-47ee-8d9a-7340949a6db2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# target é um alvo só\n",
     "# single target é um único alvo piscante. a intenção é verificar se a pessoa está prestando atenção; usar como base line; não ter desvios de foco\n",
     "# multi target tem pisca ao mesmo tempo (olhar para o 10 Hz, porém tem outras frequências também)"
@@ -18,11 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
+   "id": "bf9cc385-02ed-4db0-84d1-95327166bbee",
    "metadata": {},
    "outputs": [],
    "source": [
     "# pré-carregamento\n",
+    "\n",
     "avi_data = list()\n",
     "for i in range(1,5):\n",
     "    avi_data.append(loadmat(f\"datasets/avi/single/Sub{i}_singletarget.mat\"))"
@@ -30,7 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
+   "id": "2d277758-8928-4783-ae4a-150833129f42",
    "metadata": {},
    "outputs": [
     {
@@ -57,25 +75,85 @@
    ],
    "source": [
     "# extração direta dos dados\n",
-    "# x equivale aos 4 participantes\n",
-    "# y é label\n",
+    "\n",
     "X = [d['Data'][0][0][0] for d in avi_data]\n",
     "y = [d['Data'][0][0][1] for d in avi_data]\n",
     "\n",
-    "print(\"Divisão dos dados:\") # lado direito é o número de colunas\n",
+    "print(\"Divisão dos dados:\")\n",
     "for data in X:\n",
     "    print(data.shape)\n",
     "\n",
-    "print(\"\\nDivisão dos rótulos (sequências):\") # mostra as frequências. 30 segundos pisca 10 HZ. Tira o 12. São 4 participantes \n",
+    "print(\"\\nDivisão dos rótulos (sequências):\")\n",
     "for data in y:\n",
-    "    print(data)\n",
-    "\n",
-    "# note que os dois últimos repetem 3 vezes sempre. ele está limpando os 2 primeiros"
+    "    print(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
+   "id": "c7059d6b-0e02-49ac-aeac-cc224496626e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((15360, 21), (1, 21))"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# padronizando 1º participante\n",
+    "X1 = X[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))]\n",
+    "y1 = y[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))]\n",
+    "X1.shape, y1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "56beede1-995e-4518-bec5-4ed7e32500a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((15360, 21), (1, 21))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# padronização do 2º participante\n",
+    "X2 = X[1][:, list(set(range(26)) - set([6, 16, 17, 18, 22]))]\n",
+    "y2 = y[1][:, list(set(range(26)) - set([6, 16, 17, 18, 22]))]\n",
+    "X1.shape, y1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "7f9c0173-d335-43a3-8aa2-a838c4555900",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = list()\n",
+    "temp.append(X1)\n",
+    "temp.append(X2)\n",
+    "temp.append(X[2])\n",
+    "temp.append(X[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e343d6f1-142e-4472-a79c-ddf29ab03f78",
    "metadata": {},
    "outputs": [
     {
@@ -84,37 +162,20 @@
        "(4, 15360, 21)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# X[0] apenas o primeiro participante\n",
-    "# [:mantém o 15360; depois faz todos - aqueles que não quer \n",
-    "\n",
-    "# Padronização de X\n",
-    "temp = list()\n",
-    "temp.append(X[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))])\n",
-    "temp.append(X[1][:, list(set(range(26)) - set([6, 16, 17, 18, 22]))])\n",
-    "temp.append(X[2])\n",
-    "temp.append(X[3])\n",
-    "\n",
-    "# Padronização de y\n",
-    "temp2 = list()\n",
-    "temp2.append(y[0][:, list(set(range(27)) - set([3, 4, 5, 12, 13, 14]))])\n",
-    "temp2.append(y[1][:, list(set(range(26)) - set([6, 16, 17, 18, 22]))])\n",
-    "temp2.append(y[2])\n",
-    "temp2.append(y[3])\n",
-    "y = np.array(temp2)\n",
-    "\n",
     "X = np.array(temp)\n",
     "X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
+   "id": "85950856-3e19-44eb-868e-a77b789cad6c",
    "metadata": {},
    "outputs": [
     {
@@ -135,29 +196,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
+   "id": "e5731c9a-c4bd-4eb2-aae5-8694fc3f12f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# salva os dados numpy\n",
-    "# salva o notebook como um metadado direto\n",
     "\n",
-    "np.save(\"datasets/avi/single/data_sub.npy\", X)\n",
-    "np.save(\"datasets/avi/single/labels_sub.npy\", y)\n",
+    "np.save(\"datasets/avi/single/data_sub1.npy\", X1)\n",
+    "np.save(\"datasets/avi/single/labels_sub1.npy\", y1)\n",
     "\n",
-    "# salvar como 4, 21, 15360"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Tarefas:\n",
+    "np.save(\"datasets/avi/single/data_sub2.npy\", X2)\n",
+    "np.save(\"datasets/avi/single/labels_sub2.npy\", y2)\n",
     "\n",
-    "- Padronizar os dados de todos os 4 participantes dos dados *single-target* e salvar de forma adequada para utilização nos próximos notebooks.\n",
-    "- Realizar o mesmo estudo para os dados *multi-target*\n",
-    "- Deixar todos com 21 senão não dá para fazer matriz esparsa\n",
-    "- Entender o multi-target"
+    "np.save(\"datasets/avi/single/data_sub3.npy\", X[2])\n",
+    "np.save(\"datasets/avi/single/labels_sub3.npy\", y[2])\n",
+    "\n",
+    "np.save(\"datasets/avi/single/data_sub4.npy\", X[3])\n",
+    "np.save(\"datasets/avi/single/labels_sub4.npy\", y[3])"
    ]
   }
  ],
@@ -181,5 +237,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
