--- a/SSVEP/load_multi_avi.ipynb
+++ b/SSVEP/load_multi_avi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "e039a02b-cc6c-41c2-8fc4-a1b3aed9ea5e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "188d648c-c12e-4c06-88dc-c3e9d9ca614e",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "cfc13ae1-2950-4b0a-9cc3-fc88dcae87d3",
    "metadata": {},
    "outputs": [
@@ -84,6 +84,41 @@
     "print(\"\\nDivisão dos rótulos (sequências):\")\n",
     "for data in y:\n",
     "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cd5cb212-faf2-4039-94c0-d523ae4260d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 10, 8192)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mudando o formato de X\n",
+    "X_transposed = np.transpose(X, (0, 2, 1))\n",
+    "\n",
+    "# Verificar a nova forma de X\n",
+    "print(X_transposed.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "59f849fb-4a9a-4834-a0a3-e18a8f7cd679",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save(\"datasets/avi/multi/data_multi.npy\", X_transposed)\n",
+    "np.save(\"datasets/avi/multi/labels_multi.npy\", y)"
    ]
   }
  ],
