--- a/SSVEP/load_beta_s5.ipynb
+++ b/SSVEP/load_beta_s5.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 88,
    "id": "d3c5ef7d-a204-4ae3-b587-0a1d9bb4834e",
    "metadata": {},
    "outputs": [
@@ -56,16 +56,15 @@
       "(64, 750, 4, 40) (40, 4, 750, 64)\n",
       "\n",
       "Divisão dos rótulos (sequências):\n",
-      "[[array([[ 8.6,  8.8,  9. ,  9.2,  9.4,  9.6,  9.8, 10. , 10.2, 10.4, 10.6,\n",
-      "          10.8, 11. , 11.2, 11.4, 11.6, 11.8, 12. , 12.2, 12.4, 12.6, 12.8,\n",
-      "          13. , 13.2, 13.4, 13.6, 13.8, 14. , 14.2, 14.4, 14.6, 14.8, 15. ,\n",
-      "          15.2, 15.4, 15.6, 15.8,  8. ,  8.2,  8.4]])                      ]]\n"
+      "[[ 8.6  8.8  9.   9.2  9.4  9.6  9.8 10.  10.2 10.4 10.6 10.8 11.  11.2\n",
+      "  11.4 11.6 11.8 12.  12.2 12.4 12.6 12.8 13.  13.2 13.4 13.6 13.8 14.\n",
+      "  14.2 14.4 14.6 14.8 15.  15.2 15.4 15.6 15.8  8.   8.2  8.4]]\n"
      ]
     }
    ],
    "source": [
     "X = [d['data'][0][0][0] for d in avi_data]\n",
-    "y = [d['data'][0][0]['suppl_info']['freqs'] for d in avi_data]\n",
+    "y = [d['data'][0][0][1]['freqs'][0][0] for d in avi_data]\n",
     "\n",
     "print(\"Divisão dos dados:\")\n",
     "for data in X:\n",
