--- a/SSVEP/load_beta_s5.ipynb
+++ b/SSVEP/load_beta_s5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "533c8de4-305b-49b4-836f-b35ee66b689a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "d644b39f-c155-4837-93f3-1b7b55daf243",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "6cfd86f9-c670-4f70-a4a8-85f6db180754",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "id": "d3c5ef7d-a204-4ae3-b587-0a1d9bb4834e",
    "metadata": {},
    "outputs": [
@@ -56,15 +56,15 @@
       "(64, 750, 4, 40) (40, 4, 750, 64)\n",
       "\n",
       "Divisão dos rótulos (sequências):\n",
-      "[[ 8.6  8.8  9.   9.2  9.4  9.6  9.8 10.  10.2 10.4 10.6 10.8 11.  11.2\n",
-      "  11.4 11.6 11.8 12.  12.2 12.4 12.6 12.8 13.  13.2 13.4 13.6 13.8 14.\n",
-      "  14.2 14.4 14.6 14.8 15.  15.2 15.4 15.6 15.8  8.   8.2  8.4]]\n"
+      "[ 8.6  8.8  9.   9.2  9.4  9.6  9.8 10.  10.2 10.4 10.6 10.8 11.  11.2\n",
+      " 11.4 11.6 11.8 12.  12.2 12.4 12.6 12.8 13.  13.2 13.4 13.6 13.8 14.\n",
+      " 14.2 14.4 14.6 14.8 15.  15.2 15.4 15.6 15.8  8.   8.2  8.4]\n"
      ]
     }
    ],
    "source": [
     "X = [d['data'][0][0][0] for d in avi_data]\n",
-    "y = [d['data'][0][0][1]['freqs'][0][0] for d in avi_data]\n",
+    "y = [d['data'][0][0][1]['freqs'][0][0][0] for d in avi_data]\n",
     "\n",
     "print(\"Divisão dos dados:\")\n",
     "for data in X:\n",
