--- a/SSVEP/preprocessing.ipynb
+++ b/SSVEP/preprocessing.ipynb
@@ -31,6 +31,7 @@
     "\n",
     "# definições de filtros\n",
     "\n",
+    "# filtro em que você deseja extrair frequências em uma faixa específica de interesse\n",
     "def butter_bandpass(data, lowcut, highcut, fs=512, order=4):\n",
     "    nyq = fs * 0.5\n",
     "    low = lowcut / nyq\n",
@@ -38,21 +39,21 @@
     "    b, a = signal.butter(order, [low, high], btype='bandpass')\n",
     "    return signal.filtfilt(b, a, data)\n",
     "\n",
-    "\n",
+    "# filtro usado quando você deseja remover componentes de alta frequência do sinal\n",
     "def butter_lowpass(data, lowcut, fs=512, order=4):\n",
     "    nyq = fs * 0.5\n",
     "    low = lowcut / nyq\n",
     "    b, a = signal.butter(order, low, btype='lowpass')\n",
     "    return signal.filtfilt(b, a, data)\n",
     "\n",
-    "\n",
+    "# filtro usado para remover componentes de baixa frequência do sinal\n",
     "def butter_highpass(data, highcut, fs=512, order=4):\n",
     "    nyq = fs * 0.5\n",
     "    high = highcut / nyq\n",
     "    b, a = signal.butter(order, high, btype='highpass')\n",
     "    return signal.filtfilt(b, a, data)\n",
     "\n",
-    "\n",
+    "# filtro para remover interferências de frequência, como ruído elétrico de 50 ou 60 Hz em dados EEG.\n",
     "def butter_notch(data, cutoff, var=1, fs=512, order=4):\n",
     "    nyq = fs * 0.5\n",
     "    low = (cutoff - var) / nyq\n",
@@ -179,6 +180,7 @@
     }
    ],
    "source": [
+    "# definição dos tamanhos das figuras\n",
     "rcParams['figure.figsize'] = [16., 5.]\n",
     "print_graphs(data)"
    ]
@@ -282,9 +284,9 @@
     "#abcissa = frequencias\n",
     "# criação de um objeto \"info\"\n",
     "n_channels = 1 # criação de um canal. no beta vai ter mais\n",
-    "sfreq = 512 #64 beta\n",
-    "ch_names = ['Oz']\n",
-    "ch_types = ['eeg'] # faz x64\n",
+    "sfreq = 512 #64 beta; 512 amostras serão registradas pors egundo (2x256)\n",
+    "ch_names = ['Oz'] # nome do canal\n",
+    "ch_types = ['eeg'] # tipo do canal\n",
     "info = mne.create_info(ch_names, sfreq=sfreq, ch_types=ch_types)\n",
     "info"
    ]
