--- a/SSVEP/preprocessing_multi/preprocessing_multi_sub1.ipynb
+++ b/SSVEP/preprocessing_multi/preprocessing_multi_sub1.ipynb
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "data = np.load(\"datasets/avi/multi/data_sub1.npy\")\n",
+    "data = np.load(\"../datasets/avi/multi/data_sub1.npy\")\n",
     "print(data.shape)\n",
     "\n",
     "# Transpondo dados para organizar os dados na última dimensão\n",
@@ -312,7 +312,7 @@
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "labels = np.load(\"datasets/avi/multi/label_sub1.npy\")\n",
+    "labels = np.load(\"../datasets/avi/multi/label_sub1.npy\")\n",
     "print(labels, labels.shape)\n",
     "#repete os targets 3 vezes"
    ]
@@ -385,7 +385,7 @@
     "# data : array, shape (n_epochs, n_channels, n_times)\n",
     "data_correct = data.reshape(data.shape[0], 1, data.shape[1])\n",
     "# adicionando label como \"épocas\" do sinal\n",
-    "labels = np.load(\"datasets/avi/multi/label_sub1.npy\")\n",
+    "labels = np.load(\"../datasets/avi/multi/label_sub1.npy\")\n",
     "# método para transformar labels categóricos\n",
     "le = LabelEncoder()\n",
     "events = np.column_stack((\n",
@@ -617,7 +617,7 @@
     "\n",
     "for i in range(len(mne_data)):\n",
     "    # view = mne_data.compute_psd(method='welch', fmin=3, fmax=13)\n",
-    "    view = mne_data[i].compute_psd(method='multitaper', fmin=3, fmax=13,\n",
+    "    view = mne_data[i].compute_psd(method='multitaper', fmin=4, fmax=10,\n",
     "                                   verbose=False) # ampliação do gráfico no domínio da frequência\n",
     "    view.plot(show=False)\n",
     "    print()\n",
