--- a/SSVEP/preprocessing_single/preprocessing_avi_sub1.ipynb
+++ b/SSVEP/preprocessing_single/preprocessing_avi_sub1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -122,13 +122,13 @@
        "(21, 15360)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = np.load(\"datasets/avi/single/data_sub1.npy\")\n",
+    "data = np.load(\"../datasets/avi/single/data_sub1.npy\")\n",
     "print(data.shape)\n",
     "\n",
     "# Transpondo dados para organizar os dados na última dimensão\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        ">"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -308,14 +308,14 @@
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "labels = np.load(\"datasets/avi/single/labels_sub1.npy\")[0]\n",
+    "labels = np.load(\"../datasets/avi/single/labels_sub1.npy\")[0]\n",
     "print(labels, labels.shape)\n",
     "#repete os targets 3 vezes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        " '10': 3>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
     "# data : array, shape (n_epochs, n_channels, n_times)\n",
     "data_correct = data.reshape(data.shape[0], 1, data.shape[1])\n",
     "# adicionando label como \"épocas\" do sinal\n",
-    "labels = np.load(\"datasets/avi/single/labels_sub1.npy\")[0]\n",
+    "labels = np.load(\"../datasets/avi/single/labels_sub1.npy\")[0]\n",
     "# método para transformar labels categóricos\n",
     "le = LabelEncoder()\n",
     "events = np.column_stack((\n",
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
