--- a/SSVEP/preprocessing_multi/preprocessing_multi_sub1.ipynb
+++ b/SSVEP/preprocessing_multi/preprocessing_multi_sub1.ipynb
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
     }
    ],
    "source": [
-    "# Aplicar o filtro passa-banda aos dados\n",
+    "# Aplicar o filtro passa-faixa aos dados\n",
     "data_filtered = mne.filter.filter_data(data, sfreq=info['sfreq'], l_freq=4, h_freq=10)\n",
     "\n",
     "# Certifique-se de que os dados filtrados tenham a forma (n_epochs, n_channels, n_samples)\n",
@@ -687,9 +687,78 @@
     "# Redimensione os dados filtrados para a forma correta\n",
     "data_filtered = data_filtered.reshape(n_epochs, n_channels, n_samples)\n",
     "\n",
-    "# Adicionar os rótulos como 'épocas' do sinal\n",
-    "labels = np.load(\"../datasets/avi/multi/label_sub1.npy\")\n",
+    "# Método para transformar rótulos categóricos\n",
+    "le = LabelEncoder()\n",
+    "events = np.column_stack((\n",
+    "    np.array(range(len(labels))),\n",
+    "    np.zeros(10, dtype=int),\n",
+    "    le.fit_transform(labels))\n",
+    ")\n",
     "\n",
+    "# Imprimir os eventos\n",
+    "print(events)\n",
+    "\n",
+    "# Defina o dicionário de eventos\n",
+    "event_dict = {'6': 0, '6.5': 1, '7': 2, '7.5': 3, '8.2': 4, '9.3': 5}\n",
+    "\n",
+    "# Criar os epochs com os dados filtrados\n",
+    "mne_data = mne.EpochsArray(data_filtered, info, events, event_id=event_dict)\n",
+    "\n",
+    "# Imprimir a estrutura Epochs criada\n",
+    "print(mne_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 5]\n",
+      " [1 0 0]\n",
+      " [2 0 0]\n",
+      " [3 0 4]\n",
+      " [4 0 0]\n",
+      " [5 0 1]\n",
+      " [6 0 3]\n",
+      " [7 0 2]\n",
+      " [8 0 0]\n",
+      " [9 0 0]]\n",
+      "Not setting metadata\n",
+      "10 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
+      "<EpochsArray |  10 events (all good), 0 – 8.191 s, baseline off, ~646 kB, data loaded,\n",
+      " '6': 5\n",
+      " '6.5': 1\n",
+      " '7': 1\n",
+      " '7.5': 1\n",
+      " '8.2': 1\n",
+      " '9.3': 1>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Especificar as frequências de corte desejadas para o filtro passa-banda\n",
+    "lowcut = 5  # Frequência de corte inferior em Hz\n",
+    "highcut = 15  # Frequência de corte superior em Hz\n",
+    "\n",
+    "# Aplicar o filtro passa-banda aos dados filtrados\n",
+    "for i in range(data_filtered.shape[0]):  # Iterar através das épocas\n",
+    "    data_filtered[i, 0, :] = butter_bandpass(data_filtered[i, 0, :], lowcut, highcut, fs=info['sfreq'], order=4)\n",
+    "\n",
+    "# Certificar-se de que os dados filtrados tenham a forma correta\n",
+    "n_epochs = len(data_filtered)  # O número de épocas é igual ao número de dados originais\n",
+    "n_channels = 1  # Seus dados filtrados terão um canal\n",
+    "n_samples = len(data_filtered[0, 0, :])  # O número de amostras é igual ao comprimento dos dados filtrados\n",
+    "\n",
+    "# Redimensionar os dados filtrados para a forma correta\n",
+    "data_filtered = data_filtered.reshape(n_epochs, n_channels, n_samples)\n",
+    "\n",
+    "# Continuar com o seu código existente\n",
     "# Método para transformar rótulos categóricos\n",
     "le = LabelEncoder()\n",
     "events = np.column_stack((\n",
