--- a/SSVEP/preprocessing_single/preprocessing_avi_sub1.ipynb
+++ b/SSVEP/preprocessing_single/preprocessing_avi_sub1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "(21, 15360)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        ">"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        " '10': 3>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -836,10 +836,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting up band-pass filter from 4 - 12 Hz\n",
+      "\n",
+      "FIR filter parameters\n",
+      "---------------------\n",
+      "Designing a one-pass, zero-phase, non-causal bandpass filter:\n",
+      "- Windowed time-domain design (firwin) method\n",
+      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
+      "- Lower passband edge: 4.00\n",
+      "- Lower transition bandwidth: 2.00 Hz (-6 dB cutoff frequency: 3.00 Hz)\n",
+      "- Upper passband edge: 12.00 Hz\n",
+      "- Upper transition bandwidth: 3.00 Hz (-6 dB cutoff frequency: 13.50 Hz)\n",
+      "- Filter length: 845 samples (1.650 s)\n",
+      "\n",
+      "[[ 0  0  6]\n",
+      " [ 1  0  6]\n",
+      " [ 2  0  6]\n",
+      " [ 3  0  1]\n",
+      " [ 4  0  1]\n",
+      " [ 5  0  1]\n",
+      " [ 6  0  0]\n",
+      " [ 7  0  0]\n",
+      " [ 8  0  0]\n",
+      " [ 9  0  3]\n",
+      " [10  0  3]\n",
+      " [11  0  3]\n",
+      " [12  0  2]\n",
+      " [13  0  2]\n",
+      " [14  0  2]\n",
+      " [15  0  4]\n",
+      " [16  0  4]\n",
+      " [17  0  4]\n",
+      " [18  0  5]\n",
+      " [19  0  5]\n",
+      " [20  0  5]]\n",
+      "Not setting metadata\n",
+      "21 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
+      "<EpochsArray |  21 events (all good), 0 – 29.998 s, baseline off, ~2.5 MB, data loaded,\n",
+      " '6': 3\n",
+      " '6.5': 3\n",
+      " '7': 3\n",
+      " '7.5': 3\n",
+      " '8.2': 3\n",
+      " '9.3': 3\n",
+      " '10': 3>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.0s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Aplicando filtro\n",
+    "data_filtered = mne.filter.filter_data(data, sfreq=info['sfreq'], l_freq=4, h_freq=12)\n",
+    "\n",
+    "n_epochs = len(data)  # O número de épocas é igual ao número de dados originais\n",
+    "n_channels = 1  # Seus dados filtrados terão um canal\n",
+    "n_samples = len(data_filtered[0])  # O número de amostras é igual ao comprimento dos dados filtrados\n",
+    "\n",
+    "# Redimensione os dados filtrados para a forma correta\n",
+    "data_filtered = data_filtered.reshape(n_epochs, n_channels, n_samples)\n",
+    "\n",
+    "# Método para transformar rótulos categóricos\n",
+    "le = LabelEncoder()\n",
+    "events = np.column_stack((\n",
+    "    np.array(range(len(labels))),\n",
+    "    np.zeros(21, dtype=int),\n",
+    "    le.fit_transform(labels))\n",
+    ")\n",
+    "\n",
+    "# Imprimir os eventos\n",
+    "print(events)\n",
+    "\n",
+    "# Defina o dicionário de eventos\n",
+    "event_dict = {'6':0, '6.5':1, '7':2, '7.5':3, '8.2':4, '9.3':5, '10':6} # 6Hz está armazenado em 0...\n",
+    "\n",
+    "# Criar os epochs com os dados filtrados\n",
+    "mne_data_filtered = mne.EpochsArray(data_filtered, info, events, event_id=event_dict)\n",
+    "\n",
+    "# Imprimir a estrutura Epochs criada\n",
+    "print(mne_data_filtered)\n",
+    "mne_data_filtered.save('mne_filtered')"
+   ]
   }
  ],
  "metadata": {
