--- a/SSVEP/load/load_beta_s5.ipynb
+++ b/SSVEP/load/load_beta_s5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "533c8de4-305b-49b4-836f-b35ee66b689a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "d644b39f-c155-4837-93f3-1b7b55daf243",
    "metadata": {},
    "outputs": [],
@@ -32,19 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "6cfd86f9-c670-4f70-a4a8-85f6db180754",
    "metadata": {},
    "outputs": [],
    "source": [
     "# pré-carregamento\n",
     "avi_data = list()\n",
-    "avi_data.append(loadmat(f\"datasets/beta/S5.mat\"))"
+    "avi_data.append(loadmat(f\"../datasets/beta/S5.mat\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "d3c5ef7d-a204-4ae3-b587-0a1d9bb4834e",
    "metadata": {},
    "outputs": [
@@ -74,14 +74,6 @@
     "for data in y:\n",
     "    print(data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11073f1b-194a-46ae-85c8-ed23dc9b58e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
