--- a/SSVEP/load/load_single_avi.ipynb
+++ b/SSVEP/load/load_single_avi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "7f86392c-d169-4703-892d-0e78f25e7572",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "82f836d0-9ba2-47ee-8d9a-7340949a6db2",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "bf9cc385-02ed-4db0-84d1-95327166bbee",
    "metadata": {},
    "outputs": [],
@@ -42,12 +42,12 @@
     "\n",
     "avi_data = list()\n",
     "for i in range(1,5):\n",
-    "    avi_data.append(loadmat(f\"datasets/avi/single/Sub{i}_singletarget.mat\"))"
+    "    avi_data.append(loadmat(f\"../datasets/avi/single/Sub{i}_singletarget.mat\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "2d277758-8928-4783-ae4a-150833129f42",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "c7059d6b-0e02-49ac-aeac-cc224496626e",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        "((15360, 21), (1, 21))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "56beede1-995e-4518-bec5-4ed7e32500a1",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
        "((15360, 21), (1, 21))"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "7f9c0173-d335-43a3-8aa2-a838c4555900",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "e343d6f1-142e-4472-a79c-ddf29ab03f78",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "(4, 15360, 21)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "85950856-3e19-44eb-868e-a77b789cad6c",
    "metadata": {},
    "outputs": [
@@ -196,24 +196,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "e5731c9a-c4bd-4eb2-aae5-8694fc3f12f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# salva os dados numpy\n",
     "\n",
-    "np.save(\"datasets/avi/single/data_sub1.npy\", X1)\n",
-    "np.save(\"datasets/avi/single/labels_sub1.npy\", y1)\n",
+    "np.save(\"../datasets/avi/single/data_sub1.npy\", X1)\n",
+    "np.save(\"../datasets/avi/single/labels_sub1.npy\", y1)\n",
     "\n",
-    "np.save(\"datasets/avi/single/data_sub2.npy\", X2)\n",
-    "np.save(\"datasets/avi/single/labels_sub2.npy\", y2)\n",
+    "np.save(\"../datasets/avi/single/data_sub2.npy\", X2)\n",
+    "np.save(\"../datasets/avi/single/labels_sub2.npy\", y2)\n",
     "\n",
-    "np.save(\"datasets/avi/single/data_sub3.npy\", X[2])\n",
-    "np.save(\"datasets/avi/single/labels_sub3.npy\", y[2])\n",
+    "np.save(\"../datasets/avi/single/data_sub3.npy\", X[2])\n",
+    "np.save(\"../datasets/avi/single/labels_sub3.npy\", y[2])\n",
     "\n",
-    "np.save(\"datasets/avi/single/data_sub4.npy\", X[3])\n",
-    "np.save(\"datasets/avi/single/labels_sub4.npy\", y[3])"
+    "np.save(\"../datasets/avi/single/data_sub4.npy\", X[3])\n",
+    "np.save(\"../datasets/avi/single/labels_sub4.npy\", y[3])"
    ]
   }
  ],
