--- a/SSVEP/preprocessing_single/preprocessing_avi_sub2.ipynb
+++ b/SSVEP/preprocessing_single/preprocessing_avi_sub2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -122,13 +122,13 @@
        "(21, 15360)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = np.load(\"datasets/avi/single/data_sub2.npy\")\n",
+    "data = np.load(\"../datasets/avi/single/data_sub2.npy\")\n",
     "print(data.shape)\n",
     "\n",
     "# Transpondo dados para organizar os dados na última dimensão\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        ">"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -308,14 +308,14 @@
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "labels = np.load(\"datasets/avi/single/labels_sub2.npy\")[0]\n",
+    "labels = np.load(\"../datasets/avi/single/labels_sub2.npy\")[0]\n",
     "print(labels, labels.shape)\n",
     "#repete os targets 3 vezes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        " '10': 3>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
     "# data : array, shape (n_epochs, n_channels, n_times)\n",
     "data_correct = data.reshape(data.shape[0], 1, data.shape[1])\n",
     "# adicionando label como \"épocas\" do sinal\n",
-    "labels = np.load(\"datasets/avi/single/labels_sub2.npy\")[0]\n",
+    "labels = np.load(\"../datasets/avi/single/labels_sub2.npy\")[0]\n",
     "# método para transformar labels categóricos\n",
     "le = LabelEncoder()\n",
     "events = np.column_stack((\n",
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
