--- a/SSVEP/load/load_multi_avi.ipynb
+++ b/SSVEP/load/load_multi_avi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "e039a02b-cc6c-41c2-8fc4-a1b3aed9ea5e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "188d648c-c12e-4c06-88dc-c3e9d9ca614e",
    "metadata": {},
    "outputs": [],
@@ -31,13 +31,13 @@
     "\n",
     "avi_data = list()\n",
     "for i in range(1,6):\n",
-    "    avi_data.append(loadmat(f\"datasets/avi/multi/Sub{i}_1_multitarget.mat\"))\n",
-    "    avi_data.append(loadmat(f\"datasets/avi/multi/Sub{i}_2_multitarget.mat\"))"
+    "    avi_data.append(loadmat(f\"../datasets/avi/multi/Sub{i}_1_multitarget.mat\"))\n",
+    "    avi_data.append(loadmat(f\"../datasets/avi/multi/Sub{i}_2_multitarget.mat\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "cfc13ae1-2950-4b0a-9cc3-fc88dcae87d3",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "cd5cb212-faf2-4039-94c0-d523ae4260d7",
    "metadata": {},
    "outputs": [
@@ -110,30 +110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "59f849fb-4a9a-4834-a0a3-e18a8f7cd679",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "np.save(\"datasets/avi/multi/data_multi.npy\", X_transposed)\n",
-    "np.save(\"datasets/avi/multi/labels_multi.npy\", y)\n",
+    "np.save(\"../datasets/avi/multi/data_multi.npy\", X_transposed)\n",
+    "np.save(\"../datasets/avi/multi/labels_multi.npy\", y)\n",
     "\n",
     "# salva os dados numpy\n",
     "\n",
     "for i in range(0,10):\n",
-    "    np.save(f\"datasets/avi/multi/data_sub{i}.npy\", X[i])\n",
-    "    np.save(f\"datasets/avi/multi/label_sub{i}.npy\", y[i])\n"
+    "    np.save(f\"../datasets/avi/multi/data_sub{i}.npy\", X[i])\n",
+    "    np.save(f\"../datasets/avi/multi/label_sub{i}.npy\", y[i])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef1184a7-49bf-4bdb-a6a0-2481a575be68",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
