arrumando load beta

--- a/SSVEP/load/load_beta_s5.ipynb
+++ b/SSVEP/load/load_beta_s5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "533c8de4-305b-49b4-836f-b35ee66b689a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "d644b39f-c155-4837-93f3-1b7b55daf243",
    "metadata": {},
    "outputs": [],
@@ -32,19 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "6cfd86f9-c670-4f70-a4a8-85f6db180754",
    "metadata": {},
    "outputs": [],
    "source": [
     "# pré-carregamento\n",
-    "avi_data = list()\n",
-    "avi_data.append(loadmat(f\"../datasets/beta/S5.mat\"))"
+    "beta_data = loadmat(f\"../datasets/beta/S5.mat\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "d3c5ef7d-a204-4ae3-b587-0a1d9bb4834e",
    "metadata": {},
    "outputs": [
@@ -53,9 +52,10 @@
      "output_type": "stream",
      "text": [
       "Divisão dos dados:\n",
-      "(64, 750, 4, 40) (40, 4, 750, 64)\n",
+      "(64, 750, 4, 40)\n",
       "\n",
       "Divisão dos rótulos (sequências):\n",
+      "(40,)\n",
       "[ 8.6  8.8  9.   9.2  9.4  9.6  9.8 10.  10.2 10.4 10.6 10.8 11.  11.2\n",
       " 11.4 11.6 11.8 12.  12.2 12.4 12.6 12.8 13.  13.2 13.4 13.6 13.8 14.\n",
       " 14.2 14.4 14.6 14.8 15.  15.2 15.4 15.6 15.8  8.   8.2  8.4]\n"
@@ -63,16 +63,48 @@
     }
    ],
    "source": [
-    "X = [d['data'][0][0][0] for d in avi_data]\n",
-    "y = [d['data'][0][0][1]['freqs'][0][0][0] for d in avi_data]\n",
+    "X = beta_data['data'][0][0][0]\n",
+    "y = beta_data['data'][0][0][1]['freqs'][0][0][0]\n",
     "\n",
     "print(\"Divisão dos dados:\")\n",
-    "for data in X:\n",
-    "    print(data.shape, data.T.shape)\n",
+    "print(X.shape)\n",
     "\n",
     "print(\"\\nDivisão dos rótulos (sequências):\")\n",
-    "for data in y:\n",
-    "    print(data)"
+    "print(y.shape)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "87f001c2-2e57-4e38-8c0d-e776149499c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 40, 64, 750)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mudando o formato de X\n",
+    "X_transposed = np.array(np.transpose(X,  (2, 3, 0, 1)))\n",
+    "\n",
+    "# Verificar a nova forma de X\n",
+    "print(X_transposed.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e383a99c-e26a-49f7-8865-136f6a57009f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"../datasets/beta/data.npy\", X_transposed)\n",
+    "np.save(\"../datasets/beta/labels.npy\", y)"
    ]
   }
  ],
