generalizando multi e arrumando loads

--- a/SSVEP/load/load_multi_avi.ipynb
+++ b/SSVEP/load/load_multi_avi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "e039a02b-cc6c-41c2-8fc4-a1b3aed9ea5e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "188d648c-c12e-4c06-88dc-c3e9d9ca614e",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "cfc13ae1-2950-4b0a-9cc3-fc88dcae87d3",
    "metadata": {},
    "outputs": [
@@ -88,29 +88,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "cd5cb212-faf2-4039-94c0-d523ae4260d7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 10, 8192)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Mudando o formato de X\n",
-    "X_transposed = np.transpose(X, (0, 2, 1))\n",
+    "X_transposed = np.array([np.transpose(data) for data in X])\n",
+    "X_transposed = X_transposed.reshape(X_transposed.shape[0]*X_transposed.shape[1], X_transposed.shape[2])\n",
+    "X_transposed.shape\n",
     "\n",
-    "# Verificar a nova forma de X\n",
-    "print(X_transposed.shape)"
+    "y_transposed = np.array([np.transpose(data) for data in y])\n",
+    "y_transposed = y_transposed.reshape(1, y_transposed.shape[0]*y_transposed.shape[1])[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "59f849fb-4a9a-4834-a0a3-e18a8f7cd679",
    "metadata": {
     "scrolled": true
@@ -118,7 +112,7 @@
    "outputs": [],
    "source": [
     "np.save(\"../datasets/avi/multi/data_multi.npy\", X_transposed)\n",
-    "np.save(\"../datasets/avi/multi/labels_multi.npy\", y)\n",
+    "np.save(\"../datasets/avi/multi/labels_multi.npy\", y_transposed)\n",
     "\n",
     "# salva os dados numpy\n",
     "\n",
